# rust-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  clippy.toml  codecov.yml  rustfmt.toml
.github/workflows/: master.yml  pull-requests.yml
scripts/: linux-coverage-helper.sh  windows-coverage-helper.ps1
src/: main.rs
