[package]
name = "rust-template"
edition = "2021"
version = "0.1.0"
rust-version = "1.64"
authors = ["Cooper Walbrun <mail@cooperwalbrun.io>"]
description = "A short description of your project."
documentation = "https://github.com/cooperwalbrun/rust-template/blob/master/README.md"
homepage = "https://github.com/cooperwalbrun/rust-template"
repository = "https://github.com/cooperwalbrun/rust-template"
keywords = ["clippy", "llvm", "miri", "rust", "rustfmt", "template"]
readme = "README.md"
license-file = "LICENSE"
exclude = ["/.github/*", "/Makefile.toml", "/clippy.toml", "/rustfmt.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# If this is a library and not an end-user executable/application, it is recommended to use https://github.com/dtolnay/thiserror
# If this is an end-user executable/application and not a library, it is recommended to use https://github.com/dtolnay/anyhow

[dev-dependencies]
# mockito = "0.7.0" # Recommended for unit testing purposes
