[package]
name = "rust-template"
edition = "2024"
version = "0.1.0"
rust-version = "1.89.0"
authors = ["FirstName LastName <email@domain.com>"]
description = "A short description of your project."
documentation = "https://github.com/cooperwalbrun/rust-template/blob/master/README.md"
homepage = "https://github.com/cooperwalbrun/rust-template"
repository = "https://github.com/cooperwalbrun/rust-template"
keywords = ["clippy", "llvm", "rust", "rustfmt", "template"]
readme = "README.md"
license-file = "LICENSE"
exclude = ["/.github/*", "/Makefile.toml", "/clippy.toml", "/rustfmt.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# If this is a library and not an end-user application, it is recommended to use https://github.com/dtolnay/thiserror
# If this is an end-user application and not a library, it is recommended to use one of the following:
#    Non-CLI-based programs: https://github.com/dtolnay/anyhow
#    CLI-based programs: https://github.com/yaahc/color-eyre

[dev-dependencies]
# Add development- and/or testing-specific dependencies here
